# bytebase

./: ...  .air.toml  .air_debug.toml  .air_demo.toml  .dockerignore  .eslintcache  .gitattributes  .gitignore  .gitignore.sensitive_data  .gitpod.yml  .golangci.yaml  .goreleaser-for-darwin.yaml  .goreleaser-for-linux.yaml  .goreleaser-release.yaml  .goreleaser-releaser.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .prettierrc  .psqlrc  .sonarcloud.properties  .treant.yaml  AGENTS.md  API_DOCUMENTATION.md  AST_CACHE_DEPENDENCIES.md  BYT-7917-Design-Complete.md  BYT-7917-Design-Simple.md  Built.Json_1  CHANGELOG_SENSITIVE_DATA.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING_SENSITIVE_DATA.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.approval_flow  Dockerfile.bb  Dockerfile.render  Dockerfile.render-demo  Dockerfile.render-preview  (+57 more)
.claude-validation/: validation-report.md
.github/: dependabot.yml  semantic.yml
.husky/: commit-msg
action/: README.md  api.go  azure_devops.go  bitbucket.go  check_cmd.go  file.go  file_test.go  github.go  gitlab.go  go.mod  main.go  platform.go  rollout_cmd.go  root_cmd.go
api/: activity.go  actuator.go  anomaly.go  api.go  api_dependency_gate.go  auth.go  backup.go  bookmark.go  cache.go  column.go  config.go  data_source.go  database.go  db_extension.go  db_schema.go  debug.go  deploy.go  deploy_test.go  environment.go  error_recorder.go  extension.go  external_approval.go  idp.go  inbox.go  instance.go  instance_user.go  (+37 more)
test/api/: README.md  configs.py  conftest.py  project_test.py  pyproject.toml
(+15713 files in other folders)
