[tool.poetry]
name = "bytebase_api_test"
version = "0.0.1"
description = ""
authors = ["suzaku <satorulogic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
requests = "^2.26.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
